--- a/style.css
+++ b/style.css
@@ -13,11 +13,28 @@
     visibility: hidden;
 }
 
+#game-container {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+}
+
 #panel {
     color: white;
     background-color: black;
     display: inline-block;
     padding: 10px;
+}
+
+#result {
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    font-weight: bold;
+    color: white;
+    margin-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .dynamic-element {
