--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
+html, body {
+    height: 100%;
+    margin: 0px;
+}
+
+#main-panel{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: whitesmoke;
+}
+
+#title {
+    text-decoration: underline;
+    margin-top: 10px;
+}
+
+#replay-button {
+    margin: 20px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 2px outset;
+    background-color: lightgray;
+    cursor: pointer;
+    font-weight: bold;
+}
+
 .block-fragment {
     width: 15px;
     height: 15px;
