[FEATURE] Golang web service and Dockerfile created.

--- a/assets/template/index.html
+++ b/assets/template/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-tetris</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <script src="game.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
+    <script src="/static/js/game.js"></script>
 </head>
 <body>
     <div id="main-panel">
