--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,16 @@
+@media (min-width:320px) {
+    #main-panel{
+        transform: scale(0.5);
+    }
+}
+
 html, body {
     height: 100%;
     margin: 0px;
+}
+
+body {
+    background-color: whitesmoke;
 }
 
 #main-panel{
@@ -9,7 +19,6 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: whitesmoke;
 }
 
 #title {
